@@ -494,4 +494,5 @@ d(-62626/622201*y - 860751/622201, y^2 - 5), x^10 + 5*x^9 + 15*x^8 + 30*x^7
   ***   at top-level: nfisisom(x,x^0)
   ***                 ^---------------
   *** nfisisom: not an irreducible polynomial in nfisincl: 1.
-Total time spent: 2340
+[[4]~, [33/343, 2/2401]~]
+Total time spent: 1881
