@@ -58,6 +58,9 @@ BA   46- [mpi] dynamically linking with libpari did not work
      48- make idealstar(,N) an actual shortcut for ideal(nfinit(x), N) [#1900];
          it is recommended to use znstar instead.
 HIL  49- polclass could access invalid memory
+     50- K=bnfinit(x^2+2323);
+         P=idealprimedec(K,23)[1];
+         bnfisprincipal(K,P);  \\ oo loop
 
   Added
       1- [libari] ZM_isidentity
